# fisseq-qc-filter

./: .gitignore  README.md  pyproject.toml
src/fisseq_qc_filter/: __init__.py
src/fisseq_qc_filter/conf/: config.yaml
tests/: test_fisseq_qc_filter.py
